[package]
name = "runtime"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
colored = "3.0.0"

[lib]
path = "src/lib.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
